Cliente, tipo cliente, telefones e endereços