@@ -1,20 +1,15 @@
 package com.geous.cursouml;
 
-import com.geous.cursouml.domain.Categoria;
-import com.geous.cursouml.domain.Cidade;
-import com.geous.cursouml.domain.Estado;
-import com.geous.cursouml.domain.Produto;
-import com.geous.cursouml.repository.CategoriaRepository;
-import com.geous.cursouml.repository.CidadeRepository;
-import com.geous.cursouml.repository.EstadoRepository;
-import com.geous.cursouml.repository.ProdutoRepository;
-import jakarta.persistence.Entity;
+import com.geous.cursouml.domain.*;
+import com.geous.cursouml.domain.enums.TipoCliente;
+import com.geous.cursouml.repository.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 
 import java.util.Arrays;
+import java.util.List;
 
 @SpringBootApplication
 public class CursoumlApplication implements CommandLineRunner {
@@ -27,6 +22,10 @@ public class CursoumlApplication implements CommandLineRunner {
 	private EstadoRepository estadoRepository;
 	@Autowired
 	private CidadeRepository cidadeRepository;
+	@Autowired
+	private EnderecoRepository enderecoRepository;
+	@Autowired
+	private ClienteRepository clienteRepository;
 
 	public static void main(String[] args) {
 		SpringApplication.run(CursoumlApplication.class, args);
@@ -34,7 +33,7 @@ public class CursoumlApplication implements CommandLineRunner {
 
 	@Override
 	public void run(String... args) throws Exception {
-		Categoria cat1 = new Categoria(null, "Infomrática");
+		Categoria cat1 = new Categoria(null, "Informática");
 		Categoria cat2 = new Categoria(null, "Escritório");
 
 		Produto p1 = new Produto(null, "Computador", 2000.00);
@@ -60,9 +59,20 @@ public class CursoumlApplication implements CommandLineRunner {
 		Cidade c2 = new Cidade(null, "São Paulo", est2);
 		Cidade c3 = new Cidade(null, "Campinas", est2);
 
-		est1.setCidades(Arrays.asList(c1));
+		est1.setCidades(List.of(c1));
 		est2.setCidades(Arrays.asList(c2, c3));
 
 		cidadeRepository.saveAll(Arrays.asList(c1, c2, c3));
+
+		Cliente cli1 = new Cliente(null, "Maria Silva", "maria@gmail.com", "36378912377", TipoCliente.PESSOAFISICA);
+		cli1.getTelefones().addAll(Arrays.asList("27363323", "93838393"));
+
+		Endereco e1 = new Endereco(null, "Rua Flores", "300", "Apto 303", "Jardim", "38220834", cli1, c1);
+		Endereco e2 = new Endereco(null, "Avenida Matos", "105", "Sala 800", "Centro", "38777012", cli1, c2);
+
+		cli1.getEnderecos().addAll(Arrays.asList(e1, e2));
+
+		clienteRepository.save(cli1);
+		enderecoRepository.saveAll(Arrays.asList(e1, e2));
 	}
 }
